@@ -211,6 +211,14 @@ the block name with a controller name, e.g.
 
   $stats->profile( begin => 'controller.here' );
 
+=head2 Large Databases When Profiling
+
+When profiling your application, the size of your stats database may
+grow quite large.
+
+Your database storage and retention settings should be adjusted
+accordingly.
+
 =head1 SEE ALSO
 
 =over
