@@ -1,6 +1,8 @@
 Revision history for Catalyst-Plugin-Statsd.
 
 {{$NEXT}}
+  [Documentation]
+  - Added KNOWN ISSUE about large databases when profiling, #3
 
 v0.7.0    2020-03-11 17:22:14+00:00 Europe/London
   [Enhancements]
